--- a/app/src/main/res/anim/set.xml
+++ b/app/src/main/res/anim/set.xml
@@ -8,8 +8,8 @@
 
     android:startOffset="20">
     <alpha
-        android:startOffset="20"
-        android:duration="100"/>
+        android:duration="100"
+        android:startOffset="20" />
     <scale />
     <rotate />
     <translate />
