--- a/app/src/main/res/anim/popinlayout.xml
+++ b/app/src/main/res/anim/popinlayout.xml
@@ -1,6 +1,5 @@
-<layoutAnimation
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:delay="0.5"
-  android:animationOrder="random"
-  android:animation="@anim/popin"
-/>
+<layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
+    android:animation="@anim/popin"
+    android:animationOrder="random"
+    android:delay="0.5" /><!--延迟，随机-->
+<!--<GridLayoutAnimation/>-->
