--- a/app/src/main/res/animator/set_alpha.xml
+++ b/app/src/main/res/animator/set_alpha.xml
@@ -2,5 +2,7 @@
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="1000"
     android:propertyName="alpha"
+    android:repeatCount="-1"
+    android:repeatMode="reverse"
     android:valueFrom="0.0"
     android:valueTo="1.0"></objectAnimator>
