--- a/app/src/main/res/layout/activity_main_r.xml
+++ b/app/src/main/res/layout/activity_main_r.xml
@@ -1,8 +1,9 @@
-<com.ll.test.nestedscroll.view.StickyNavLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                               xmlns:tools="http://schemas.android.com/tools"
-                                               android:layout_width="match_parent"
-                                               android:layout_height="match_parent"
-                                               android:orientation="vertical">
+<com.ll.test.nestedscroll.view.StickyNavLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/id_stickynavlayout_topview"
